move common scala test gradle configuration to root build.gradle file, build should now run all tests when the gradle test task is called