@@ -45,9 +45,15 @@ subprojects {
 
     publishToMavenLocal.dependsOn test
 
-    test {
-        jvmArgs '-XX:MaxPermSize=512m'
-        systemProperties = System.getProperties()
+    task test(overwrite: true, dependsOn: testClasses) << {
+        ant.taskdef(name: 'scalatest',
+                classname: 'org.scalatest.tools.ScalaTestAntTask',
+                classpath: sourceSets.test.runtimeClasspath.asPath
+        )
+        ant.scalatest(runpath: sourceSets.test.output.classesDir,
+                haltonfailure: 'true',
+                fork: 'true')
+                {reporter(type: 'stderr')}
     }
 
     def manifestAttributes = [
